// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolvei18nTextsForIntegrationCard resolvei18nTextsForIntegrationCard: return updated value of manifest with resolved i18n texts  1`] = `
{
  "_version": "1.15.0",
  "sap.app": {
    "applicationVersion": {
      "version": "1.0.0",
    },
    "description": "Description of an Object Card",
    "i18n": "",
    "id": "objectCard",
    "subTitle": "Display Settlement Dates",
    "title": "Display Settlement Dates",
    "type": "card",
  },
  "sap.card": {
    "content": {
      "groups": [
        {
          "items": [
            {
              "label": "Activation Status",
              "name": "CndnContrActvtnStatusName",
              "value": "Condition Control Activation Status",
            },
            {
              "label": "Process Category",
              "name": "CndnContrProcessCategoryDesc",
              "value": "Condition Control Process Category Description",
            },
          ],
          "title": "Group 1",
        },
        {
          "items": [
            {
              "label": "Sales Organization Description",
              "name": "SalesOrganizationName",
              "value": "Sales Organization Name",
            },
            {
              "label": "Short Description",
              "name": "CndnContrPrtlSettlmtCatName",
              "value": "Condition Control Settlement Category Name",
            },
          ],
          "title": "Group 2",
        },
      ],
    },
    "extension": "module:sap/cards/ap/common/extensions/BaseIntegrationCardExtension",
    "header": {
      "data": {
        "path": "/content/",
      },
      "mainIndicator": {
        "number": "500",
        "unit": "USD",
      },
      "subTitle": "Header Subtitle",
      "title": "Header Title",
      "type": "Numeric",
      "unitOfMeasurement": "{CndnContrTypeDesc}",
    },
    "type": "Object",
  },
  "sap.insights": {
    "cardType": "LEAN_DT",
    "parentAppId": "objectCard",
    "templateName": "ObjectPage",
    "versions": {
      "ui5": "",
    },
  },
}
`;

exports[`resolvei18nTextsForIntegrationCard resolvei18nTextsForIntegrationCard: return updated value of manifest without resolving i18n texts  1`] = `
{
  "_version": "1.15.0",
  "sap.app": {
    "applicationVersion": {
      "version": "1.0.0",
    },
    "description": "Description of an Object Card",
    "i18n": "",
    "id": "objectCard",
    "subTitle": "APP_SUBTITLE",
    "title": "APP_TITLE",
    "type": "card",
  },
  "sap.card": {
    "content": {
      "groups": [
        {
          "items": [
            {
              "label": "{GROUP_1_LABEL_1}",
              "name": "CndnContrActvtnStatusName",
              "value": "{GROUP_1_VALUE_1}",
            },
            {
              "label": "{GROUP_1_LABEL_2}",
              "name": "CndnContrProcessCategoryDesc",
              "value": "{GROUP_1_VALUE_2}",
            },
          ],
          "title": "{GROUP_TITLE_1}",
        },
        {
          "items": [
            {
              "label": "{GROUP_2_LABEL_1}",
              "name": "SalesOrganizationName",
              "value": "{GROUP_2_VALUE_1}",
            },
            {
              "label": "{GROUP_2_LABEL_2}",
              "name": "CndnContrPrtlSettlmtCatName",
              "value": "{GROUP_2_VALUE_2}",
            },
          ],
          "title": "{GROUP_TITLE_2}",
        },
      ],
    },
    "extension": "module:sap/cards/ap/common/extensions/BaseIntegrationCardExtension",
    "header": {
      "data": {
        "path": "/content/",
      },
      "mainIndicator": {
        "number": "NUMBER",
        "unit": "UNIT",
      },
      "subTitle": "HEADER_SUBTITLE",
      "title": "HEADER_TITLE",
      "type": "Numeric",
      "unitOfMeasurement": "{CndnContrTypeDesc}",
    },
    "type": "Object",
  },
  "sap.insights": {
    "cardType": "LEAN_DT",
    "parentAppId": "objectCard",
    "templateName": "ObjectPage",
    "versions": {
      "ui5": "",
    },
  },
}
`;
